// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shadow File resource e2e shadow file resource test: GatsbyShadowFile create 1`] = `
Object {
  "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
  "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
  "id": "src/gatsby-theme-blog/components/author.js",
  "path": "src/gatsby-theme-blog/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: GatsbyShadowFile create plan 1`] = `
Object {
  "currentState": Object {},
  "describe": "Shadow src/components/author.js from the theme gatsby-theme-blog",
  "diff": "[31m- Original  - 0[39m
[32m+ Modified  + 4[39m

[32m+ import React from 'react'[39m
[32m+[39m
[32m+ export default () => <h1>F. Scott Fitzgerald</h1>[39m
[32m+[39m",
  "id": "src/gatsby-theme-blog/components/author.js",
  "newState": Object {
    "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
    "id": "src/gatsby-theme-blog/components/author.js",
    "path": "src/components/author.js",
    "theme": "gatsby-theme-blog",
  },
  "path": "src/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: GatsbyShadowFile destroy 1`] = `
Object {
  "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
  "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
  "id": "src/gatsby-theme-blog/components/author.js",
  "path": "src/gatsby-theme-blog/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: GatsbyShadowFile update 1`] = `
Object {
  "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
  "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
  "id": "src/gatsby-theme-blog/components/author.js",
  "path": "src/gatsby-theme-blog/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: GatsbyShadowFile update plan 1`] = `
Object {
  "currentState": Object {
    "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
    "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
    "id": "src/gatsby-theme-blog/components/author.js",
    "path": "src/gatsby-theme-blog/components/author.js",
    "theme": "gatsby-theme-blog",
  },
  "describe": "Shadow src/components/author.js from the theme gatsby-theme-blog",
  "diff": "[2mCompared values have no visual difference.[22m",
  "id": "src/gatsby-theme-blog/components/author.js",
  "newState": Object {
    "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
    "id": "src/gatsby-theme-blog/components/author.js",
    "path": "src/components/author.js",
    "theme": "gatsby-theme-blog",
  },
  "path": "src/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;
